lib至少要有一个cpp，否则部分平台无法编译通过

--- a/src/sample-net/CMakeLists.txt
+++ b/src/sample-net/CMakeLists.txt
@@ -43,7 +43,9 @@ file(GLOB_RECURSE include_headers
     impl/curl_http_client.h
 )
 
+# 至少要有一个cpp，否则部分平台无法编译通过
 add_library(${PROJECT_NAME} STATIC
+    sample/SampleNet.cpp
     ${include_headers}
 )
 
