--- a/src/sample-tools/CMakeLists.txt
+++ b/src/sample-tools/CMakeLists.txt
@@ -39,10 +39,10 @@ find_package(tinyxml2 CONFIG REQUIRED)
 # Public 头文件
 file(GLOB_RECURSE include_headers
     SampleTools.h
-    Chrono.h
-    Crypto.h
+    interface/crypto_interface.h
     interface/threadpool_interface.h
     interface/threadtimer_interface.h
+    impl/cryptopp_impl.h
     impl/stl_threadpool_impl.h 
     impl/boost_threadpool_impl.h 
     impl/stl_threadtimer_impl.h 
