--- a/test/sample-tools-test/CMakeLists.txt
+++ b/test/sample-tools-test/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(GTest CONFIG REQUIRED)
 
 add_executable (${PROJECT_NAME}
     SampleToolsTest.cpp
-    CryptoTest.cpp
+    crypto_test.cpp
     json_test.cpp
     threadpool_test.cpp
     boost_threadpool_test.cpp
