--- a/src/sample-net/CMakeLists.txt
+++ b/src/sample-net/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(Boost REQUIRED COMPONENTS url)
 message(STATUS "[${PROJECT_NAME}] Boost_VERSION_STRING : ${Boost_VERSION_STRING}")
 message(STATUS "[${PROJECT_NAME}] Boost_INCLUDE_DIRS : ${Boost_INCLUDE_DIRS}")
 message(STATUS "[${PROJECT_NAME}] Boost_LIBRARY_DIRS : ${Boost_LIBRARY_DIRS}")
+add_definitions(-DBOOST_ASIO_NO_EXCEPTIONS) #boost会捕获assert
 include_directories(${Boost_INCLUDE_DIRS})
 
 # Public 头文件
