--- a/sample-tools/CMakeLists.txt
+++ b/sample-tools/CMakeLists.txt
@@ -36,6 +36,9 @@ find_package(nlohmann_json CONFIG REQUIRED)
 # 引入 tinyxml
 find_package(tinyxml2 CONFIG REQUIRED)
 
+# 引入 fmt
+find_package(fmt CONFIG REQUIRED)
+
 # Public 头文件
 file(GLOB_RECURSE include_headers
     chrono.h
@@ -62,6 +65,7 @@ target_link_libraries(${PROJECT_NAME}
     PUBLIC rapidjson
     PUBLIC nlohmann_json::nlohmann_json
     PUBLIC tinyxml2::tinyxml2
+    PUBLIC fmt::fmt
 )
 
 target_include_directories(${PROJECT_NAME}
