win32设置命令行utf-8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ if (WIN32)
     # Windows 可选编译配置集（vcpkg built-in/community triplets）
     set(VCPKG_TARGET_TRIPLET x64-windows)
     
-    # MSVC 编译参数兼容 utf-8 源代码
+    # 源码使用 utf-8 编码格式编译
     add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
     add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 else()
