--- a/sample-tools/CMakeLists.txt
+++ b/sample-tools/CMakeLists.txt
@@ -41,6 +41,7 @@ find_package(fmt CONFIG REQUIRED)
 
 # Public 头文件
 file(GLOB_RECURSE include_headers
+    cpp_version.h
     common.h
     platform.h
     chrono.h
