--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ include_directories(${PROJECT_SOURCE_DIR}/sample-db)
 include_directories(${PROJECT_SOURCE_DIR}/sample-datacenter)
 include_directories(${PROJECT_SOURCE_DIR}/sample-dynamic-lib)
 include_directories(${PROJECT_SOURCE_DIR}/sample-main)
+include_directories(${PROJECT_SOURCE_DIR}/sample-main-imgui)
 add_subdirectory(sample-tools)
 add_subdirectory(sample-pb)
 add_subdirectory(sample-net)
@@ -60,6 +61,7 @@ add_subdirectory(sample-db)
 add_subdirectory(sample-datacenter)
 add_subdirectory(sample-dynamic-lib)
 add_subdirectory(sample-main)
+add_subdirectory(sample-main-imgui)
 
 # test
 include_directories(${PROJECT_SOURCE_DIR}/sample-tools-test)
