msvc未使用标准cmake宏定义

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ if (WIN32)
     message(STATUS "[start-cpp-vcpkg] CMAKE_GENERATOR_PLATFORM : ${CMAKE_GENERATOR_PLATFORM}")
     if("${CMAKE_GENERATOR_PLATFORM}" STREQUAL "x64" OR "${CMAKE_GENERATOR_PLATFORM}" STREQUAL "Win64")
         set(VCPKG_TARGET_TRIPLET x64-windows)
-    else()
+    elseif("${CMAKE_GENERATOR_PLATFORM}" STREQUAL "x86" OR "${CMAKE_GENERATOR_PLATFORM}" STREQUAL "Win32")
         set(VCPKG_TARGET_TRIPLET x86-windows)
     endif()
 endif()
