--- a/sample-pb/CMakeLists.txt
+++ b/sample-pb/CMakeLists.txt
@@ -48,9 +48,9 @@ target_include_directories(${PROJECT_NAME}
 
 install(TARGETS ${PROJECT_NAME}
     PUBLIC_HEADER DESTINATION include
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION bin
-    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin # .dll
+    LIBRARY DESTINATION bin # .dylib .so
+    ARCHIVE DESTINATION lib # .lib .a
 )
 
 message("[${PROJECT_NAME}] -------- done")
