--- a/sample-db-test/CMakeLists.txt
+++ b/sample-db-test/CMakeLists.txt
@@ -32,9 +32,9 @@ target_include_directories(${PROJECT_NAME}
 
 install(TARGETS ${PROJECT_NAME}
     PUBLIC_HEADER DESTINATION include
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION bin
-    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin # .dll
+    LIBRARY DESTINATION bin # .dylib .so
+    ARCHIVE DESTINATION lib # .lib .a
 )
 
 # 运行 GTest
