缓存 vcpkg 下载项 v4

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -50,11 +50,13 @@ jobs:
         submodules: recursive
 
     - name: Cache vcpkg packages
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           vcpkg/downloads
           vcpkg/packages
+        key: all-platform
+        save-always: true
     
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
