区分 os 缓存 vcpkg 下载项

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -55,7 +55,7 @@ jobs:
         path: |
           vcpkg/downloads
           vcpkg/packages
-        key: all-platform
+        key: ${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('**/vcpkg/versions/baseline.json') }}
         save-always: true
     
     - name: Set reusable strings
