protobuf自动化编译

--- a/sample-pb/CMakeLists.txt
+++ b/sample-pb/CMakeLists.txt
@@ -16,8 +16,34 @@ find_package(Protobuf CONFIG REQUIRED)
 message(STATUS "[${PROJECT_NAME}] Protobuf_VERSION : ${Protobuf_VERSION}")
 message(STATUS "[${PROJECT_NAME}] Protobuf_INCLUDE_DIRS : ${Protobuf_INCLUDE_DIRS}")
 message(STATUS "[${PROJECT_NAME}] Protobuf_LIBRARIES : ${Protobuf_LIBRARIES}")
+message(STATUS "[${PROJECT_NAME}] Protobuf_PROTOC_EXECUTABLE: ${Protobuf_PROTOC_EXECUTABLE}")
 
-# 由于PROTOBUF_GENERATE_CPP只能编译一个目录下的proto，尽量选择手动生成pb.cc，参考general-cpp.bat
+# 由于protobuf_generate_cpp只能编译一个目录下的proto，需要手动执行protoc命令
+file(REAL_PATH pb proto_path)
+file(REAL_PATH pb_cpp cpp_out)
+message(STATUS "[${PROJECT_NAME}] proto_path: ${proto_path}")
+message(STATUS "[${PROJECT_NAME}] cpp_out: ${cpp_out}")
+file(MAKE_DIRECTORY ${cpp_out})
+file(GLOB_RECURSE proto_files ${proto_path}/*.proto)
+foreach(proto_file ${proto_files})
+    execute_process(
+        COMMAND ${Protobuf_PROTOC_EXECUTABLE}
+            --proto_path=${Protobuf_INCLUDE_DIRS}
+            --proto_path=${proto_path}
+            --cpp_out=${cpp_out}
+            ${proto_file}
+        RESULT_VARIABLE result
+        OUTPUT_VARIABLE output
+        ERROR_VARIABLE error
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+        ERROR_STRIP_TRAILING_WHITESPACE
+    )
+    if(result EQUAL 0)
+        message(STATUS "[${PROJECT_NAME}] Successfully processed ${proto_file}")
+    else()
+        message(FATAL_ERROR "[${PROJECT_NAME}] Failed to process ${proto_file}: ${error}")
+    endif()
+endforeach()
 
 # Public 头文件
 file(GLOB_RECURSE c_headers pb_cpp/*.h)
