--- a/sample-tools-test/CMakeLists.txt
+++ b/sample-tools-test/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(GTest CONFIG REQUIRED)
 add_executable (${PROJECT_NAME}
     glog_test.cpp
     crypto_test.cpp
+    compression_test.cpp
     json_test.cpp
     threadpool_test.cpp
     threadtimer_test.cpp
