--- a/sample-tools/CMakeLists.txt
+++ b/sample-tools/CMakeLists.txt
@@ -61,7 +61,7 @@ file(GLOB_RECURSE include_headers
     interface/threadpool_interface.h
     interface/threadtimer_interface.h
     impl/cryptopp_impl.h
-    impl/compression_impl.h
+    impl/snappy_impl.h
     impl/progschj-ThreadPool.h
     impl/stl_threadpool_impl.h # use "progschj-ThreadPool.h"
     impl/stl_threadtimer_impl.h
