--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ elseif (APPLE)
     set(CMAKE_OSX_DEPLOYMENT_TARGET "10.15")
 else()
     # 编译动态库需要设置-fPIC
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -pthread")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -pthread")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 
     # 静态链接 C++ 依赖库，不要使用 -static 静态链接 glibc
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
