--- a/.github/workflows/build-template.yml
+++ b/.github/workflows/build-template.yml
@@ -28,13 +28,14 @@ jobs:
       with:
         submodules: recursive
 
-    # - name: Cache vcpkg packages
-    #   uses: actions/cache@v4
-    #   with:
-    #     path: |
-    #       vcpkg/downloads
-    #     key: ${{ runner.os }}-${{ runner.arch }}-${{ inputs.cpp_compiler }}-${{ hashFiles('**/vcpkg/versions/baseline.json') }}
-    #     save-always: true
+    - name: Cache vcpkg packages
+      uses: actions/cache@v4
+      with:
+        path: |
+          vcpkg/downloads
+          vcpkg/buildtrees
+          vcpkg/packages
+        key: ${{ runner.os }}-${{ runner.arch }}-${{ inputs.cpp_compiler }}-${{ hashFiles('**/vcpkg/versions/baseline.json') }}
     
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
