新增宏定义列表

--- a/sample-tools/CMakeLists.txt
+++ b/sample-tools/CMakeLists.txt
@@ -52,6 +52,7 @@ find_package(fmt CONFIG REQUIRED)
 # Public 头文件
 file(GLOB_RECURSE include_headers
     cpp_version.h
+    cpp_def.h
     common.h
     platform.h
     hardware.h
